--- a/python_practice/hello world jupyter NB/hello.ipynb
+++ b/python_practice/hello world jupyter NB/hello.ipynb
@@ -16,6 +16,31 @@
    "source": [
     "print('Hello_World!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello ashu\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet = \"hello ashu\"\n",
+    "print(greet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
